--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "example": "http-server -p 8880"
   },
   "repository": {
     "type": "git",
